fixed the css z-index

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -39,6 +39,7 @@
   animation-duration: 0.2s;
 }
 .dropdown .dropdown-content::after {
+  z-index: -5;
   content: '';
   height: 10px;
   width: 10px;
