--- a/components/Dropdown/Dropdown.less
+++ b/components/Dropdown/Dropdown.less
@@ -31,6 +31,7 @@
       animation-duration: .2s; 
     } 
     &::after {
+      z-index: -5;
       content: '';
       height: 10px;
       width: 10px;
